# tic-tac-pico

./: .gitignore  CMakeLists.txt  README.md  compile_project.sh  tic_tac_toe.uf2
src/: CMakeLists.txt  constants.h  logic.c  logic.h  main.c  painting.c  painting.h
